--- a/index.html
+++ b/index.html
@@ -116,8 +116,10 @@
         <p>データの取得元は、P2P地震情報API v2というものを使用しています。<br>
             APIから取得できる情報のうち、地震情報、緊急地震速報、津波情報をこのBotで配信しております。<br>
             データの発表元は配信した情報の最下部に、「情報元 ○○○ - P2P地震情報API v2」といった形式で記載しております！<br>
+            このBotを作るにあたり、データの取得に利用させていただいており、大変ありがたく思っております。<br>
+            この場を借りて感謝いたします。<br>
             <br>
-            P2P地震情報については、以下のサイトからご確認いただけます！<br>
+            P2P地震情報さまについては、以下のサイトからご確認いただけます！<br>
             <a href="https://www.p2pquake.net/" target="_blank">P2P地震情報</a>
         </p>
 
