--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <html lang="ja">
     <meta charset="utf-8">
     <!--OGPはじまり-->
-    <meta property="og:title" content="Eaquord - 地震速報Discord Bot">
+    <meta property="og:title" content="Eaquord">
     <meta property="og:description" content="地震速報・地震情報・津波情報お知らせDiscord Bot">
     <meta property="og:url" content="https://eaquord.daichimarukana.com">
     <meta property="og:image" content="https://eaquord.daichimarukana.com/img/eewbot_icon.png">
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Eaquord - 地震速報Discord Bot">
+    <meta property="og:site_name" content="Eaquord">
     <!--OGPここまで-->
     <link rel="apple-touch-icon" type="image/png" href="img/favicon.png">
     <link rel="icon" type="image/png" href="img/favicon.png">
